tests/NormalTests/paczka2/big_fuzzy/82110608.err
Error in line 4: s5yp S282 83,4
Error in line 7: 0mi3xaNP A236 98,4
Error in line 8: 0mi3xaNP A689 56,7
Error in line 14: BfQz S557 62,5
Error in line 20: aqkevAz A236 73,4
Error in line 25: 0mi3xaNP A236 146,08
Error in line 18: mo34W31 S282 97,4
Error in line 13: 0mi3xaNP A236 62,2
Error in line 34: 0mi3xaNP A689 88,0
Error in line 41: s5yp A236 -2,3
Error in line 6: s5yp A236 33,6
Error in line 45: 0mi3xaNP A689 73,3
Error in line 42: s5yp S282 24,3
Error in line 49: s5yp A689 55,9
Error in line 40: yJT S557 62,7
Error in line 56: BfQz A689 17,1
Error in line 54: yJT A689 60,9
Error in line 58: BfQz S557 37,7
Error in line 61: mo34W31 A236 29,9
Error in line 31: aqkevAz S282 304,0
Error in line 60: BfQz A236 31,1
Error in line 57: s5yp A689 97,6
Error in line 77: BfQz A236 59,7
Error in line 84: 0mi3xaNP A689 12,7
Error in line 86: 0mi3xaNP S557 48,4
Error in line 114: aqkevAz A689 49,8
Error in line 119: 0mi3xaNP S557 15,5
Error in line 125: 0mi3xaNP A236 75,5
Error in line 127: s5yp A236 60,4
Error in line 128: BfQz A689 56,8
Error in line 153: mo34W31 A236 45,2
Error in line 149: s5yp S282 49,6
Error in line 162: aqkevAz S557 17,6
Error in line 173: aqkevAz S282 52,8
Error in line 185: aqkevAz A689 207,16
Error in line 192: aqkevAz A689 44,6
Error in line 200: BfQz S282 K6,1
Error in line 204: yJT S557 24,6
Error in line 212: s5yp A236 100,0
Error in line 215: BfQz S282 >5,8
Error in line 216: BfQz A236 33,06
Error in line 217: BfQz A689 75,8
Error in line 227: A236 S282 24,8
Error in line 230: yJT A236 99,0
Error in line 235: yJT S282 87,3
Error in line 237: yJT A689 89,1
Error in line 220: 0mi3xaNP S557 15,6
Error in line 229: BfQz S557 306,8
Error in line 243: s5yp S557 50,7
